update ppconfig from pakeplus

--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,176 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "preview": "desktop",
-    "platform": ["1-1", "1-2", "2-1", "2-2"],
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "prefix": "",
-    "pcRepo": "",
-    "iosRepo": "",
-    "androidRepo": "",
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "fullScreen": false,
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        },
-        "webview": {
-            "userAgent": "",
-            "javaScriptEnabled": true,
-            "domStorageEnabled": true,
-            "allowFileAccess": true,
-            "loadWithOverviewMode": true,
-            "setSupportZoom": true,
-            "clearCache": true
-        }
-    },
-    "ios": {
-        "name": "PakePlus",
-        "showName": "PakePlus5",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.xiaoshen.pakeplus.ios",
-        "icon": "./app-icon.png",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": true,
-        "debug": true,
-        "safeArea": "all"
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.pakeplus.android",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "desktop": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.2",
-        "id": "com.pakeplus.app",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": false,
-        "tauriApi": false,
-        "buildMethod": "local",
-        "debug": false
-    }
-}
+{"message":"Not Found","documentation_url":"https://docs.github.com/rest/git/refs#get-all-references-in-a-namespace","status":"404","name":"bcabaaffbdcedaf","url":"https://avhole2.xyz/zh","showName":"AVHOLE","appid":"com.AVHOLE.pakeplus","icon":"","iconPath":"C:\\Users\\解晗策\\AppData\\Roaming\\com.pakeplus.pacbao\\h4fq1lty5j.png","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"0.0.1","preview":"desktop","platform":["1-1"],"width":800,"height":600,"desc":"","jsFile":[],"filterCss":"","customJs":"{\n  \"name\": \"video-web-app\",\n  \"version\": \"1.0.0\",\n  \"description\": \"PakePlus打包视频网页，支持视频跳转播放\",\n  \"main\": \"index.js\",\n  \"scripts\": {\n    \"build:android\": \"pake build android\",\n    \"build:ios\": \"pake build ios\"\n  },\n  \"pake\": {\n    \"url\": \"https://avhole2.xyz/zh\", // 替换为你的视频主页地址\n    \"title\": \"AVHOLE\", // 你的App名称\n    \"icon\": \"./icon.png\", // 图标路径，无图标可删除该行\n    \"platforms\": [\"android\", \"ios\"], // 打包平台，按需保留\n    \"webview\": {\n      // 核心：视频网页专属WebView配置，缺一不可\n      \"javascriptEnabled\": true, // 开启JS（视频跳转依赖JS）\n      \"domStorageEnabled\": true, // 保存页面状态，避免跳转后丢失上下文\n      \"javascriptCanOpenWindowsAutomatically\": true, // 允许JS打开新窗口（视频播放页常用）\n      \"supportMultipleWindows\": true, // 支持多窗口，适配新窗口播放\n      \"mediaPlaybackRequiresUserAction\": false, // 关闭播放需手动触发限制\n      \"mixedContentMode\": \"always_allow\", // 允许http/https混合资源（视频资源常见）\n      \"allowFileAccess\": true,\n      \"allowFileAccessFromFileURLs\": true,\n      \"allowUniversalAccessFromFileURLs\": true, // 放开本地文件访问，适配流媒体\n      \"cacheMode\": \"LOAD_DEFAULT\", // 缓存策略，避免视频资源加载异常\n      \"userAgent\": \"Mozilla/5.0 (Linux; Android 13; Pixel 7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Mobile Safari/537.36\", // 模拟手机浏览器UA，避免网页适配异常\n      \"loadsImagesAutomatically\": true // 自动加载视频封面图\n    },\n    // 禁用默认的外部浏览器插件，改用自定义拦截\n    \"plugins\": {\n      \"inappbrowser\": false\n    },\n    // 申请必要权限，视频网页核心仅需网络权限\n    \"permissions\": {\n      \"network\": true,\n      \"storage\": true,\n      \"media\": true // 媒体权限，适配视频播放\n    }\n  },\n  \"devDependencies\": {\n    \"pake-plus\": \"^latest\"\n  }\n}\n// pake.config.js 核心拦截逻辑，PakePlus会自动加载该配置\nmodule.exports = {\n  // Android端视频跳转拦截配置（解决90%的Android跳转问题）\n  android: {\n    webViewClient: {\n      /**\n       * 拦截所有URL跳转，强制在当前WebView打开\n       * 适配a标签直接跳转、JS location.href跳转的视频链接\n       */\n      shouldOverrideUrlLoading: function (view, request) {\n        const url = request.getUrl().toString();\n        // 过滤无效链接，仅处理http/https开头的视频链接\n        if (url.startsWith(\"http://\") || url.startsWith(\"https://\")) {\n          view.loadUrl(url);\n          return true; // 拦截系统默认行为\n        }\n        return false; // 放行非网页链接（如原生协议）\n      }\n    },\n    webChromeClient: {\n      /**\n       * 拦截JS window.open 新窗口请求（视频播放页最常用）\n       * 解决点击视频后无响应的核心逻辑\n       */\n      onCreateWindow: function (webView, isDialog, isUserGesture, resultMsg) {\n        // 创建新的WebView实例承载视频播放页\n        const context = webView.getContext();\n        const newWebView = new android.webkit.WebView(context);\n        // 给新WebView同步原配置，保证视频播放环境一致\n        const settings = newWebView.getSettings();\n        settings.setJavaScriptEnabled(true);\n        settings.setDomStorageEnabled(true);\n        settings.setMediaPlaybackRequiresUserAction(false);\n        settings.setMixedContentMode(android.webkit.WebSettings.MIXED_CONTENT_ALWAYS_ALLOW);\n        // 将新WebView加入容器，替代系统浏览器打开\n        webView.addView(newWebView);\n        // 传递新窗口请求，完成跳转\n        const transport = resultMsg.getResult();\n        transport.setWebView(newWebView);\n        resultMsg.sendToTarget();\n        return true;\n      }\n    }\n  },\n\n  // iOS端视频跳转拦截配置（适配WKWebView）\n  ios: {\n    wkNavigationDelegate: {\n      /**\n       * 拦截iOS端所有链接激活和新窗口跳转\n       * 适配target=\"_blank\"和window.open\n       */\n      decidePolicyForNavigationAction: function (webView, action, decisionHandler) {\n        // 识别新窗口跳转（target=\"_blank\"）和链接点击\n        if (action.navigationType === \"linkActivated\" || action.targetFrame === null) {\n          const request = action.request;\n          // 强制在当前WebView加载视频链接\n          webView.loadRequest(request);\n          decisionHandler(\"cancel\"); // 取消系统默认跳转\n          return;\n        }\n        decisionHandler(\"allow\"); // 放行正常内部路由\n      }\n    },\n    /**\n     * 拦截iOS的window.open新窗口创建\n     */\n    wkUIDelegate: {\n      createWebViewWithConfiguration: function (webView, config, action, features) {\n        // 用当前WebView承载新窗口，避免跳系统浏览器\n        webView.loadRequest(action.request);\n        return null;\n      }\n    }\n  }\n};\n","isHtml":false,"htmlPath":"","htmlFiles":[],"prefix":"","pcRepo":"PakePlus-v2.1.5","iosRepo":"PakePlus-iOS-v2.1.5","androidRepo":"PakePlus-Android-v2.1.5","more":{"windows":{"label":"bcabaaffbdcedaf","title":"AVHOLE","url":"https://avhole2.xyz/zh","userAgent":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36","width":800,"height":600,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":false,"shadow":true,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false,"backgroundColor":null,"backgroundThrottling":null,"javascriptDisabled":false}},"phone":{"fullScreen":false,"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"bcabaaffbdcedaf","showName":"AVHOLE","version":"0.0.1","webUrl":"https://avhole2.xyz/zh","id":"com.AVHOLE.pakeplus.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"debug":false,"safeArea":"fullscreen"},"android":{"name":"bcabaaffbdcedaf","showName":"AVHOLE","version":"0.0.1","webUrl":"https://avhole2.xyz/zh","id":"com.AVHOLE.pakeplus.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"debug":false,"safeArea":"fullscreen"},"desktop":{"name":"bcabaaffbdcedaf","showName":"AVHOLE","version":"0.0.1","id":"com.AVHOLE.pakeplus.desktop","desc":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","webUrl":"https://avhole2.xyz/zh","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"local","debug":false}}
