update ppconfig from pakeplus

--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,176 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "preview": "desktop",
-    "platform": ["1-1", "1-2", "2-1", "2-2"],
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "prefix": "",
-    "pcRepo": "",
-    "iosRepo": "",
-    "androidRepo": "",
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "fullScreen": false,
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        },
-        "webview": {
-            "userAgent": "",
-            "javaScriptEnabled": true,
-            "domStorageEnabled": true,
-            "allowFileAccess": true,
-            "loadWithOverviewMode": true,
-            "setSupportZoom": true,
-            "clearCache": true
-        }
-    },
-    "ios": {
-        "name": "PakePlus",
-        "showName": "PakePlus5",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.xiaoshen.pakeplus.ios",
-        "icon": "./app-icon.png",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": true,
-        "debug": true,
-        "safeArea": "all"
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.pakeplus.android",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "desktop": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.2",
-        "id": "com.pakeplus.app",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": false,
-        "tauriApi": false,
-        "buildMethod": "local",
-        "debug": false
-    }
-}
+{"message":"Not Found","documentation_url":"https://docs.github.com/rest/git/refs#get-all-references-in-a-namespace","status":"404","name":"bcefcfbefeb","url":"https://avhole.space/zh/","showName":"AVHOLE","appid":"com.bcefcfbefeb.pakeplus","icon":"","iconPath":"C:\\Users\\解晗策\\AppData\\Roaming\\com.pakeplus.pacbao\\9oztlq4zco.png","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"0.0.3","preview":"desktop","platform":["1-1"],"width":800,"height":600,"desc":"","jsFile":[],"filterCss":"","customJs":"const hookClick = (e) => {\n  // ########## 新增：外部链接拦截核心配置 ##########\n  const allowedHosts = ['avhole.com', 'www.avhole.space', 'avhole2.website/zh', 'avhole2.online/zh']; // 替换为你的白名单域名\n  const origin = e.target.closest('a');\n  // 1. 有a标签且含链接时，先校验是否为外部域名\n  if (origin && origin.href) {\n    try {\n      const linkHost = new URL(origin.href).hostname;\n      // 非白名单域名，直接拦截跳转\n      if (!allowedHosts.includes(linkHost)) {\n        e.preventDefault();\n        alert('禁止跳转外部链接'); // 可删除/替换为自定义提示\n        console.log('拦截外部a标签跳转:', origin.href);\n        return; // 拦截后直接退出，不执行后续逻辑\n      }\n    } catch (err) {\n      console.log('链接解析失败，拦截跳转:', err);\n      e.preventDefault();\n      return;\n    }\n  }\n  // ########## 原有：内部_blank跳转处理逻辑 ##########\n  const isBaseTargetBlank = document.querySelector('head base[target=\"_blank\"]');\n  console.log('origin', origin, isBaseTargetBlank);\n  if (\n    (origin && origin.href && origin.target === '_blank') ||\n    (origin && origin.href && isBaseTargetBlank)\n  ) {\n    e.preventDefault();\n    console.log('handle origin', origin);\n    location.href = origin.href;\n  } else {\n    console.log('not handle origin', origin);\n  }\n\n  // ########## 新增：嵌入window.location/open拦截（全局生效） ##########\n  const originalLocation = window.location;\n  const originalOpen = window.open;\n  // 拦截window.location赋值跳转\n  Object.defineProperty(window, 'location', {\n    set: (url) => {\n      try {\n        const urlHost = new URL(url).hostname;\n        if (!allowedHosts.includes(urlHost)) {\n          console.log('拦截非白名单location跳转:', url);\n          return;\n        }\n        originalLocation.href = url;\n      } catch (err) {\n        console.log('location解析失败，拦截跳转:', err);\n      }\n    }\n  });\n  // 拦截window.open跳转\n  window.open = (url) => {\n    try {\n      const urlHost = new URL(url).hostname;\n      if (!allowedHosts.includes(urlHost)) {\n        console.log('拦截非白名单window.open:', url);\n        return null;\n      }\n      return originalOpen.call(window, url);\n    } catch (err) {\n      console.log('open链接解析失败，拦截跳转:', err);\n      return null;\n    }\n  };\n};\n\n// ########## 保留：beforeunload非用户操作拦截（全局） ##########\nwindow.addEventListener('beforeunload', (e) => {\n  if (!e.isTrusted) { // 拦截脚本触发的页面跳转/刷新\n    e.preventDefault();\n    e.returnValue = '';\n    console.log('拦截非用户触发的beforeunload跳转');\n  }\n});\n","isHtml":false,"htmlPath":"","htmlFiles":[],"prefix":"","pcRepo":"PakePlus-v2.1.5","iosRepo":"PakePlus-iOS-v2.1.5","androidRepo":"PakePlus-Android-v2.1.5","more":{"windows":{"label":"bcefcfbefeb","title":"AVHOLE","url":"https://avhole.space/zh/","userAgent":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36","width":800,"height":600,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":false,"shadow":true,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false,"backgroundColor":null,"backgroundThrottling":null,"javascriptDisabled":false}},"phone":{"fullScreen":false,"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"bcefcfbefeb","showName":"AVHOLE","version":"0.0.3","webUrl":"https://avhole.space/zh/","id":"com.bcefcfbefeb.pakeplus.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"debug":false,"safeArea":"fullscreen"},"android":{"name":"bcefcfbefeb","showName":"AVHOLE","version":"0.0.3","webUrl":"https://avhole.space/zh/","id":"com.bcefcfbefeb.pakeplus.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"debug":false,"safeArea":"fullscreen"},"desktop":{"name":"bcefcfbefeb","showName":"AVHOLE","version":"0.0.3","id":"com.bcefcfbefeb.pakeplus.desktop","desc":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","webUrl":"https://avhole.space/zh/","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"local","debug":false}}
